# HoldMyNeRF

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  app.py  bachground_subtraction.py  bg_remove.py  blur_detection.py  cluster_bg_remove.ipynb  deeplab_demo.ipynb  docker-compose.yml  env_file.sh  gradio_app.py  hand_remove.py  hand_rm_mediapipe.py  imageGenerator.py  pyproject.toml  r.txt  requirements.txt  requirements_linux.sh  requirements_windows.bat  seem.py  seem_extraction.py  seem_testt.py  test_crt_project.py  torch.txt
config/: camera_path.json  cmdline.py
crt_project/: bg_remove.py  blur_detection.py  hand_remove.py
requirements/linux/: requirements.txt  requirements_git.txt
requirements/windows/: r.txt
scipts/: cmdline.py  seem_extraction.py
tests/: test_crt_project.py
