[tool.poetry]
name = "crt-project"
version = "0.1.0"
description = "first trial with using poetry"
authors = ["shiohiyoko <takagif315@gmail.com>"]
readme = "README.md"
packages = [{include = "crt_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
